# examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  analyze_notebooks.py  it_threat_detection.ipynb  pyproject.toml  time_series_weather_small_embeddings.ipynb
.cursor/: BUGBOT.md
.github/: NOTEBOOK_REVIEW_TEMPLATE.md
alert_similarity/: alert_similarity_example.ipynb
article_recommender/: article_recommendations.ipynb
bert_search_test/: bertcomparison.ipynb
deduplication/: deduplication_scholarly_articles.ipynb
docs/: Read_Units_Demonstrated.ipynb  assistant-quickstart.ipynb  assistant-retrieve-context-snippets.ipynb  cascading-retrieval.ipynb  full-text-search.ipynb  gen-qa-openai-fast.ipynb  gen-qa-openai.ipynb  gpt-4-langchain-docs.ipynb  it-threat-detection.ipynb  langchain-retrieval-agent.ipynb  langchain-retrieval-augmentation.ipynb  lexical-search.ipynb  onboarding-recommender.ipynb  pinecone-bulk-import.ipynb  pinecone-import.ipynb  pinecone-quickstart.ipynb  pinecone-reranker.ipynb  pinecone_reranker.ipynb  rag-getting-started.ipynb  read-units-demonstrated.ipynb  semantic-search.ipynb  semantic-search.py
extreme_classification/: extreme_ml.ipynb
facial_similarity_search/: facial_similarity_search.ipynb
faiss_tutorial/: intro.ipynb  intro_speed_tests.ipynb
feature-store/: feast_feature_store_notebook.ipynb
generation/: prompt-engineering.ipynb
grafana_monitoring/: README.md
hnsw_faiss/: hnsw_faiss.ipynb
hybrid_image_search/: helper.py  hybrid_image_and_caption_search.ipynb
hybrid_search/: basic_hybrid_search.ipynb  hybrid_ecommerce_search.ipynb
image_search/: helper.py  image_search.ipynb  simple_pytorch_image_search.ipynb
it_threat_detection/: it_threat_detection.ipynb
jeopardy/: helper.py  jeopardy.ipynb
learn/: README.md
learn/generation/langchain/langgraph/02-ollama-langgraph-agent/: 02-ollama-langgraph-agent.ipynb  README.md  pyproject.toml
locality_sensitive_hashing/: random_projection.ipynb
locality_sensitive_hashing_random_projection/: faiss_implementation.ipynb  hyperplanes.ipynb  random_projection.ipynb  random_projection_simp.ipynb
locality_sensitive_hashing_traditional/: sparse_implementation.ipynb
metadata_filtered_search/: metadata_filtered_search.ipynb
movie_recommender/: 00_movie_recommender.ipynb  movie_recommender.html  movie_recommender.ipynb  movie_recommender.md  movielens_movie_recommendations.ipynb
ner_search/: ner_powered_search.ipynb
product_quantization/: pq_faiss.ipynb  pq_simple.ipynb  tuning_pq.ipynb
product_recommender/: product_recommender.ipynb
question_answering/: abstractive_question_answering.ipynb  extractive_question_answering.ipynb  question_answering.ipynb  table_qa.ipynb
quick-tour/: hello-pinecone.ipynb  namespacing.ipynb  simple-classifier.ipynb
quick_tour/: hello_pinecone.ipynb  interacting_with_a_service.ipynb  interacting_with_the_index.ipynb  metadata_filtering.ipynb  namespacing.ipynb  simple_classifier.ipynb
recipe_search/: recipe_search.ipynb
scripts/: README.md  ticketbot.py  (+1 more)
(+1488 files in other folders)
