[tool.poetry]
name = "ollama-langgraph-agent"
version = "0.1.0"
description = "Dependencies required for running the Ollama LangGraph Agent example"
authors = ["\"James Briggs\" <james@pinecone.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "0.2.12"
langchain-core = "0.2.29"
langgraph = "0.2.3"
langchain-ollama = "0.1.1"
ipykernel = "6.29.5"
html5lib = "1.1"
beautifulsoup4 = "4.12.3"
semantic-router = "0.0.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
